# mocha-pyside

./: .gitmodules  requirements-doc.txt  requirements.txt
coin/: dependencies.yaml  module_config.yaml
sources/pyside2/: CMakeLists.txt  pyside_version.py
sources/pyside2/PySide2/: CMakeLists.txt
sources/pyside2/PySide2/Qt3DRender/: typesystem_3drender.xml
sources/pyside2/PySide2/QtCore/: typesystem_core_common.xml
sources/pyside2/PySide2/QtSql/: typesystem_sql.xml
sources/pyside2/PySide2/QtWidgets/: typesystem_widgets_common.xml
sources/pyside2/PySide2/glue/: qtcore.cpp
sources/pyside2/PySide2/support/: deprecated.py  generate_pyi.py
sources/pyside2/cmake/Macros/: PySideModules.cmake
sources/pyside2/libpyside/: pysidemetafunction.cpp
sources/shiboken2/: CMakeLists.txt  shiboken_version.py
sources/shiboken2/ApiExtractor/: abstractmetabuilder.cpp  abstractmetalang.cpp  abstractmetalang.h  apiextractor.cpp  apiextractor.h  docparser.cpp  typesystem.cpp  typesystem.h  typesystem_p.h  typesystemparser.cpp  typesystemparser.h
sources/shiboken2/ApiExtractor/clangparser/: clangbuilder.cpp  clangutils.cpp  clangutils.h  compilersupport.cpp
sources/shiboken2/ApiExtractor/parser/: codemodel.cpp  codemodel.h
sources/shiboken2/ApiExtractor/tests/: testtemplates.cpp
sources/shiboken2/data/: CMakeLists.txt  shiboken_helpers.cmake
sources/shiboken2/generator/: CMakeLists.txt  main.cpp
sources/shiboken2/generator/qtdoc/: qtdocgenerator.cpp  qtdocgenerator.h
sources/shiboken2/generator/shiboken2/: cppgenerator.cpp  headergenerator.cpp  shibokengenerator.cpp  shibokengenerator.h
sources/shiboken2/libshiboken/: CMakeLists.txt  basewrapper.cpp  basewrapper.h  bindingmanager.cpp  helper.cpp  helper.h  pep384impl.cpp  pep384impl.h  sbkconverter.cpp  sbkenum.cpp  signature.cpp  signature.h
sources/shiboken2/shibokenmodule/: CMakeLists.txt
sources/shiboken2/shibokenmodule/files.dir/shibokensupport/signature/: parser.py
